Fri Feb 11 16:41:08 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAO.mwc:

          Exclude tools/modeling/tests.

        * configure:

          If CIAO_ROOT is not set, set it to a non-existent path so that
          MPC.cfg doesn't add /MPC/config to its include path.

Fri Feb 11 15:48:09 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "RT13927", which includes the implementation
          of the Eclipse-based OpenDDS Modeling SDK.
          For details see the branch-specific change log at
          docs/history/ChangeLog-RT13927.

Fri Feb 11 13:16:02 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Moved setting of socket options to after socket is opened.

Thu Feb 10 16:42:18 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/multicast/MulticastDataLink.cpp:

          Set send buffer to ACE_DEFAULT_MAX_SOCKET_BUFSIZ if it's defined
          (receive buffer is already configurable).

        * dds/DCPS/transport/udp/UdpDataLink.cpp:

          Set send and receive buffers to ACE_DEFAULT_MAX_SOCKET_BUFSIZ
          if it's defined.

Thu Feb 10 15:58:54 UTC 2011  Don Hudson  <hudsond@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.h:
        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/multicast/MulticastConfiguration.cpp:
        * dds/DCPS/transport/simpleTCP/SimpleTcpTransport.cpp:
        * dds/DCPS/transport/udp/UdpConfiguration.cpp:

          Removed trailing white space.

Wed Feb  9 23:48:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/framework/TransportConfiguration.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          Fixed further WCHAR problems.

Wed Feb  9 22:24:04 UTC 2011  Don Hudson  <hudsond@ociweb.com>
